--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes custom-pulse {
+  0%,
+  100% {
+    /* opacity: 0.8; */
+    transform: scale(1);
+  }
+  50% {
+    /* opacity: 1; */
+    transform: scale(0.8);
+  }
+}
+
+.custom-pulse {
+  animation: custom-pulse 3s ease-in-out infinite;
+}
